# stock-predict-with-vibe-coding

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini
gateway/: Dockerfile  README.md  pyproject.toml
gateway/app/: main.py
gateway/app/api/: deps.py  routers.py
gateway/app/core/: config.py  http.py  logging.py
gateway/app/domain/: report_schema.py  sector_map.py
gateway/app/services/: report_service.py
gateway/tests/: test_gateway_healthz.py  test_report_api.py
infra/: docker-compose.yml
infra/db/init/: 01_create_extensions.sql
services/app/data/sample/: AAPL_1d.parquet  AAPL_5m.parquet  TSM_1d.parquet  TSM_5m.parquet
services/gateway/tests/: test_report_api.py
services/llm/: pyproject.toml
services/llm/app/: main.py
services/llm/app/api/: routers.py
services/llm/app/core/: config.py  logging.py
services/llm/tests/: test_llm_healthz.py
services/market_data/: Dockerfile  README.md  alembic.ini  pyproject.toml  start.sh
services/market_data/app/: main.py
services/market_data/app/adapters/: base.py  free_source.py
services/market_data/app/api/: routers.py
services/market_data/app/core/: config.py  logging.py
services/market_data/app/indicators/: __init__.py  macd.py  moving_average.py  rsi.py  volume.py
services/market_data/app/utils/: adjust.py  validators.py
services/market_data/migrations/: env.py
services/market_data/migrations/versions/: timestamp_baseline.py
services/market_data/tests/: conftest.py  test_adjust.py  test_bars_api.py  test_indicators.py  test_market_data_healthz.py
services/rag/: Dockerfile  README.md  pyproject.toml
services/rag/app/: alembic.ini  main.py
services/rag/app/api/: routers.py
services/rag/app/core/: config.py  logging.py
services/rag/app/db/: __init__.py  crud.py  models.py  session.py
services/rag/app/db/migrations/: env.py  script.py.mako
services/rag/app/db/migrations/versions/: timestamp_baseline_news.py
services/rag/app/domain/: schemas.py
services/rag/app/ingest/: __init__.py  rss_ingestor.py  sample_loader.py
services/rag/app/rag/: chunk.py  embed.py  mapping.py  search.py
services/rag/tests/: conftest.py  test_rag_healthz.py  test_search_news_api.py
