[tool.poetry]
name = "llm"
version = "0.1.0"
description = "LLM Service"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pydantic = "^1.10.0"
httpx = "^0.24.0"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.0"
loguru = "^0.6.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
