[tool.poetry]
name = "market_data"
version = "0.1.0"
description = "Market Data Service"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pydantic = "^1.10.0"
httpx = "^0.24.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
loguru = "^0.7.2"
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
psycopg = {version = "^3.1.0", extras = ["binary"]}
python-dotenv = "^1.0.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
yfinance = "^0.2.41"
pyarrow = "^17.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
