[tool.poetry]
name = "rag"
version = "0.1.0"
description = "RAG Service"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pydantic = "^1.10.0"
httpx = "^0.24.0"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.0"
loguru = "^0.6.0"
python-dotenv = "^1.0.0"
SQLAlchemy = "^2.0.25"
alembic = "^1.13.1"
psycopg = {version = "^3.2.1", extras = ["binary"]}
pgvector = "^0.2.5"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"
sentence-transformers = "^2.2.2"
torch = {version = "^2.2.0", markers = "platform_system != 'Darwin' or platform_machine != 'arm64'"}
tiktoken = "^0.6.0"
feedparser = "^6.0.10"
beautifulsoup4 = "^4.12.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
